<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragments.contactU">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="484dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/contactUs"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:text="@string/contact_us"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_contact"
            android:drawablePadding="16dp"
            android:hint="@string/Subject"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingTop="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textColorHint="@color/greay"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="start"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_contact"
            android:drawablePadding="16dp"
            android:gravity="start|top"
            android:hint="@string/Message"
            android:inputType="textMultiLine"
            android:paddingStart="10dp"
            android:paddingTop="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textColorHint="@color/greay"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/send_contact"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:background="@drawable/shape1"
            android:gravity="center"
            android:text="@string/send" />

    </LinearLayout>



</FrameLayout>