<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="600dp"
    android:background="@color/white"
    tools:context=".Fragments.contactU">


    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="597dp"
        android:layout_marginBottom="63dp"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/contactUs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_us"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_contact"
                    android:drawablePadding="16dp"
                    android:hint="@string/id"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="20dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textColorHint="@color/greay"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/name_u"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_contact"
                    android:drawablePadding="16dp"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="20dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textColorHint="@color/greay"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/phone_u"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_contact"
                    android:drawablePadding="16dp"
                    android:hint="@string/phone_placeholder"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="20dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textColorHint="@color/greay"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_contact"
                    android:drawablePadding="16dp"
                    android:hint="@string/Subject"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="20dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textColorHint="@color/greay"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="108dp"
                    android:layout_gravity="start"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_contact"
                    android:drawablePadding="16dp"
                    android:gravity="start|top"
                    android:hint="@string/Message"
                    android:inputType="textMultiLine"
                    android:paddingStart="10dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="20dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textColorHint="@color/greay"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/send"
                    android:layout_width="130dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/shape1"
                    android:gravity="center"
                    android:text="@string/send" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>