<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/shape">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:onClick="ClickLogo"
            android:src="@drawable/profile" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="78dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/name"
            android:fontFamily="sans-serif-thin"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />
    </FrameLayout>


    <LinearLayout
        android:id="@+id/linHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:onClick="ClickHome"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/homee" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="12dp"
            android:text="@string/home"
            android:textColor="@color/black" />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/linProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:onClick="ClickProfile"
        android:orientation="horizontal"
        tools:ignore="UsingOnClickInXml">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/userr" />
        <TextView
            android:layout_width="127dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:padding="12dp"
            android:text="Profile"
            android:textColor="@color/black" />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:onClick="ClickLogout"
        android:orientation="horizontal"
        tools:ignore="UsingOnClickInXml">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/logout" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:padding="12dp"
            android:text="@string/logout"
            android:textColor="@color/black" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/Setting"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/greay" />

    <LinearLayout
        android:id="@+id/linalarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:onClick="ClickAlarm"
        android:orientation="horizontal"
        tools:ignore="UsingOnClickInXml">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/alarm" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="12dp"
            android:text="@string/Alarm"
            android:textColor="@color/black" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linnotif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:onClick="ClickNotif"
        android:orientation="horizontal"
        tools:ignore="UsingOnClickInXml">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/notification" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:padding="12dp"
            android:text="@string/Notification"
            android:textColor="@color/black" />


    </LinearLayout>
</LinearLayout>