<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/shape"
        android:orientation="vertical">

        <ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/down"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="25dp">

        </TextView>


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="400dp"
        android:layout_height="470dp"
        android:layout_gravity="center"
        android:layout_marginTop="170dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="30dp"
        app:cardMaxElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
       >

        <EditText
            android:id="@+id/name"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_round"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="16dp"
            android:hint="@string/name"
            android:paddingLeft="30dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/greay"
            android:textSize="14dp"
            android:textAppearance="?android:attr/textAppearanceMedium"

            />

        <EditText
            android:id="@+id/phone"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_below="@+id/name"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:inputType="number"
            android:background="@drawable/edit_round"
            android:drawableLeft="@drawable/telephone"
            android:drawablePadding="16dp"
            android:hint="@string/phone_placeholder"
            android:paddingLeft="30dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/greay"
            android:textSize="14dp"
            android:textAppearance="?android:attr/textAppearanceMedium"

            />



        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_below="@+id/phone"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:background="@drawable/edit_round"
            android:drawableLeft="@drawable/key"
            android:drawablePadding="16dp"
            android:hint="@string/password_placeholder"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="30dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/greay"
            android:textSize="14dp"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:id="@+id/sexe"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_below="@+id/name"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="220dp"
            android:background="@drawable/edit_round"
            android:drawableLeft="@drawable/gender"
            android:drawablePadding="16dp"
            android:hint="@string/sexe"
            android:paddingLeft="30dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/greay"
            android:textSize="14dp"
            android:textAppearance="?android:attr/textAppearanceMedium"

            />

        <Button
            android:id="@+id/register"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@drawable/button"
            android:text="@string/register" />


    </androidx.cardview.widget.CardView>

</RelativeLayout>